[tool.poetry]
name = "serve"
version = "0.1.0"
description = ""
authors = ["Vijay Mariadassou <vijay@karma3labs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
psutil = "^5.9.8"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
numpy = "^1.26.4"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
