[tool.poetry]
name = "serve"
version = "0.1.0"
description = ""
authors = ["Vijay Mariadassou <vijay@karma3labs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
psutil = "^5.9.8"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
